:bug: Fix a bug on Safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,10 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  overflow: hidden;
+}
+
+html {
+  overscroll-behavior: none;
+  overflow: hidden;
 }
